Improve utils for creating space in circuit layout